# maf-openclaw-mini-maf-openclaw-mini-

./: .env.example  .gitignore  README.md  mcp-config.example.json  pyproject.toml  requirements.txt  slack_bot_with_tools.py  test_mcp.py  test_memory.py  test_rag.py  test_scheduler.py
docs/: architecture.md  explanation.md
src/maf_openclaw_mini/agent/: __init__.py  context.py  core.py  prompts.py  tools.py
src/maf_openclaw_mini/mcp/: __init__.py  client.py  config.py  tool_converter.py
src/maf_openclaw_mini/memory/: __init__.py  composite_provider.py  mem0_client.py
src/maf_openclaw_mini/rag/: __init__.py  embeddings.py  indexer.py  search_tool.py  vectorstore.py
src/maf_openclaw_mini/scheduler/: __init__.py  reminder_tools.py  task_scheduler.py
src/maf_openclaw_mini/storage/: __init__.py  database.py  message_store.py  session_provider.py
src/maf_openclaw_mini/tools/: __init__.py  web_search.py
src/maf_openclaw_mini/utils/: __init__.py  errors.py  logger.py
tests/: test_agent.py  test_agent_with_tools.py  test_maf_integration.py  test_mcp_simple.py  test_slack_bot.py  test_storage.py
